# slark

./: .gitignore  .travis.yml  CMake-Android.cmake  CMake-iOS.cmake  CMake-ios.cmake  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Podfile  README.md  README_zh.md  config.json  ios.toolchain.cmake  main.cpp  rebuild.py  slark.podspec
.github/workflows/: cmake.yml  codeql.yml
base/headers/: Log.hpp
cmake/: gtest.cmake
core/headers/: AVFrame.hpp  Data.hpp  FileHandler.hpp  IDemuxer.hpp  IOManager.hpp  Player.hpp  WavDemuxer.hpp
core/src/: DecoderManager.cpp  WavDemuxer.cpp
demo/Android/: settings.gradle.kts
demo/Android/app/: build.gradle.kts
demo/Android/gradle/: libs.versions.toml
demo/iOS/demo/: Podfile
docs/: android-api.md  ios-api.md
script/: build.py  build_openssl_Android.sh  build_openssl_iOS.sh  config.json  format.sh  rebuild.py  slark.ini  style.clang-format
script/test/: CTestTestfile.cmake  cmake_install.cmake
script/test/base-test/: CTestTestfile.cmake  cmake_install.cmake
slark/: baseMain.cpp  main.cpp
slark.xcodeproj/: project.pbxproj
slark.xcworkspace/: contents.xcworkspacedata
slark.xcworkspace/xcuserdata/ping.tan.xcuserdatad/: UserInterfaceState.xcuserstate
slark/base/: Assert.cpp  Assert.h  Assert.hpp  Data.hpp  File.cpp  File.h  FileUtility.cpp  FileUtility.h  Log.cpp  Log.hpp  LogOutput.cpp  LogOutput.h  Logoutput.h  NonCopyable.h  Random.cpp  Random.hpp  Reflection.hpp  RingBuffer.hpp  SafeDeque.hpp  StringUtil.cpp  StringUtil.h  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h  Time.cpp  Time.hpp  Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h  TimerManager.hpp  TimerPool.cpp  TimerPool.h
slark/base/headers/: Assert.hpp  Data.hpp  File.hpp  FileUtility.hpp  Log.hpp  NonCopyable.hpp  Random.hpp  Reflection.hpp  RingBuffer.hpp  StringUtil.hpp  Thread.hpp  ThreadManager.hpp  Time.hpp  Timer.hpp  TimerManager.hpp  TimerPool.hpp  Utility.hpp
slark/base/src/: Assert.cpp  File.cpp  FileUtility.cpp  Log.cpp  Random.cpp  StringUtil.cpp  Thread.cpp  ThreadManager.cpp  Time.cpp  Timer.cpp  TimerManager.cpp  TimerPool.cpp  Utility.cpp
slark/base/test/: main.cpp  test.hpp  testThread.cpp  testThread.hpp  testTimer.cpp  testTimer.hpp
slark/core/: AVFrame.hpp  AVFrameDeque.cpp  AVFrameDeque.hpp  AVFrameSafeDeque.cpp  AVFrameSafeDeque.hpp  Base.h  BaseClass.hpp  FileHandler.cpp  FileHandler.hpp  IOHandler.h  IOHandler.hpp  IOManager.cpp  IOManager.h  MediaDefs.cpp  MediaDefs.h  MediaDefs.hpp  MediaUtility.cpp  MediaUtility.hpp  Node.cpp  Node.h  Player.cpp  Player.h  PlayerImpl.cpp  PlayerImpl.h  ReadFileHandler.cpp  ReadFileHandler.hpp  ReadHandler.cpp  ReadHandler.hpp  TransportEvent.h  Type.hpp  VideoInfo.h  main.cpp
src/: main.cpp
src/base/: Assert.hpp  Base.h  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Channel.hpp  Clock.cpp  Clock.h  Data.hpp  DataView.cpp  DataView.h  File.cpp  File.h  FileUtil.cpp  FileUtil.h  FileUtility.cpp  FileUtility.h  IOBase.h  IOHandler.h  IReader.h  Log.hpp  LogOutput.cpp  LogOutput.h  MPSCQueue.hpp  Manager.hpp  NonCopyable.h  Random.cpp  Random.hpp  Range.h  Reader.cpp  Reader.h  Reader.hpp  Reflection.hpp  RingBuffer.hpp  StringUtil.cpp  StringUtil.h  Synchronized.hpp  Thread.cpp  Thread.h  ThreadManager.cpp  (+16 more)
src/base/platform/iOS/: iOSBase.h  iOSBase.mm  iOSInternal.h  iOSInternal.mm  iOSUtil.h  iOSUtil.mm
src/core/: AVFrame.hpp  CMakeLists.txt  Event.cpp  Event.h  HLSReader.cpp  HLSReader.h  MediaBase.cpp  MediaBase.h  MediaDefs.cpp  MediaDefs.h  MediaUtil.cpp  MediaUtil.h  MediaUtility.cpp  MediaUtility.hpp  Node.cpp  Node.h  PlayerImpl.cpp  PlayerImpl.h  PlayerImplHelper.cpp  PlayerImplHelper.h  RemoteReader.cpp  RemoteReader.h  VideoInfo.h
src/core/audio/: AudioDefine.h  AudioInfo.h  AudioRenderComponent.cpp  AudioRenderComponent.h
src/core/codec/: DecoderComponent.cpp  DecoderComponent.h  DecoderConfig.h  DecoderManager.cpp  DecoderManager.h  FFMpegDecoder.h  IDecoder.h  RawDecoder.cpp  RawDecoder.h  VideoDecoder.h
src/core/demuxer/: DemuxerComponent.cpp  DemuxerComponent.h  DemuxerManager.cpp  DemuxerManager.h  HLSDemuxer.cpp  HLSDemuxer.h  IDemuxer.h  Mp4Box.cpp  Mp4Box.hpp  Mp4Demuxer.cpp  Mp4Demuxer.h  WavDemuxer.cpp
src/core/muxer/: DemuxerManager.cpp  DemuxerManager.h  HLSDemuxer.cpp  HLSDemuxer.h  IDemuxer.h  Mp4Box.cpp  Mp4Box.hpp  Mp4Demuxer.cpp  Mp4Demuxer.h  Mp4Demuxer.hpp  WavDemuxer.cpp  WavDemuxer.h
src/core/opengles/: GLProgram.cpp  GLProgram.h  GLShader.cpp  GLShader.h  IEGLContext.h
src/core/platform/iOS/: AudioDescription.h  AudioDescription.mm  AudioRender.h  AudioRender.mm  iOSAACHWDecoder.hpp  iOSAACHWDecoder.mm  iOSEGLContext.h  iOSEGLContext.mm  iOSMediaUtil.h  iOSMediaUtil.mm  iOSVideoHWDecoder.h  iOSVideoHWDecoder.mm
src/core/public/: GLContextManager.cpp  GLContextManager.h  IEGLContext.h  Player.cpp  Player.h
src/core/video/: VideoInfo.h
src/http/: CMakeLists.txt  HttpUtil.cpp  PlainSocket.cpp  Request.cpp  RequestSession.cpp  SSLManager.cpp  Socket.cpp  TSLSocket.cpp  Url.cpp
src/http/include/: HttpUtil.h  PlainSocket.h  SSLManager.h  Socket.h  TSLSocket.h  Url.h
src/http/include/public/: HttpsHelper.h  Request.h  RequestSession.h  Type.h
src/interface/iOS/: CMakeLists.txt  SlarkPlayer.h  SlarkPlayer.mm  SlarkRenderView.h  SlarkRenderView.mm  SlarkViewController.h  SlarkViewController.mm  slark.h  slark.mm
test/: CMakeLists.txt
test/base/: BufferTest.cpp  CMakeLists.txt  CTimeTest.cpp  ClockTest.cpp  DataTest.cpp  FileTest.cpp  MPSCQueueTestcase.cpp  RingBufferTest.cpp  StringUtilTest.cpp  ThreadPoolTest.cpp  ThreadTest.cpp  TimerTest.cpp
test/base-test/: CMakeLists.txt  main.cpp
test/base_test/: BufferTest.cpp  CMakeLists.txt  CTimeTest.cpp  ChannelTest.cpp  ClockTest.cpp  DataTest.cpp  FileTest.cpp  RingBufferTest.cpp  SafeDequeTest.cpp  StringUtilTest.cpp  ThreadTest.cpp  TimerTest.cpp  stringTest.cpp
test/core_test/: CMakeLists.txt  test.cpp
test/http/: CMakeLists.txt  RequestSessionTest.cpp
test/http_test/: CMakeLists.txt  RequestSessionTest.cpp  RequestTest.cpp  UrlParseTest.cpp
(+289 files in other folders)
